# spark

./: Cargo.toml  README.md
.cargo/: config.toml
.cursor/plans/: sikhar-ui-framework-a03eb39e.plan.md
assets/shaders/: basic.wgsl
crates/sikhar/: Cargo.toml
crates/sikhar-core/: Cargo.toml
crates/sikhar-core/src/: lib.rs  pipeline.rs  types.rs  wgpu_init.rs
crates/sikhar-input/: Cargo.toml
crates/sikhar-input/src/: action.rs  events.rs  focus.rs  hit_test.rs  lib.rs
crates/sikhar-layout/: Cargo.toml
crates/sikhar-layout/src/: lib.rs  tree.rs
crates/sikhar-native-apple/: Cargo.toml
crates/sikhar-native-apple/src/: events.rs  layout.rs  lib.rs  native_widget.rs  view_manager.rs
crates/sikhar-native-apple/src/ffi/: appkit.rs  uikit.rs
crates/sikhar-native-apple/src/widgets/: button.rs  label.rs  mod.rs  progress_indicator.rs  slider.rs  switch.rs  text_field.rs  view.rs
crates/sikhar-render/: Cargo.toml
crates/sikhar-render/src/: commands.rs  lib.rs  renderer.rs  shape_pass.rs  text_pass.rs
crates/sikhar-text/: Cargo.toml
crates/sikhar-text/src/: atlas.rs  lib.rs  system.rs
crates/sikhar-widgets/: Cargo.toml
crates/sikhar-widgets/src/: button.rs  container.rs  context.rs  lib.rs  scroll.rs  text.rs  text_input.rs  widget.rs
crates/sikhar/src/: accessibility.rs  app.rs  lib.rs  web.rs
crates/spark/: Cargo.toml
crates/spark-core/: Cargo.toml
crates/spark-core/src/: buffer.rs  lib.rs  pipeline.rs  vertex.rs  wgpu_init.rs
crates/spark-input/: Cargo.toml
crates/spark-input/src/: focus.rs  hit_test.rs  lib.rs
crates/spark-layout/: Cargo.toml
crates/spark-layout/src/: lib.rs  tree.rs
crates/spark-native-apple/: Cargo.toml
crates/spark-native-apple/src/: events.rs  layout.rs  lib.rs  native_widget.rs  view_manager.rs
crates/spark-native-apple/src/ffi/: appkit.rs  mod.rs
crates/spark-native-apple/src/widgets/: button.rs  label.rs  progress_indicator.rs  slider.rs  switch.rs  text_field.rs  view.rs
crates/spark-render/: Cargo.toml
crates/spark-render/src/: commands.rs  lib.rs  renderer.rs  shape_pass.rs  text_pass.rs
crates/spark-text/: Cargo.toml
crates/spark-text/src/: lib.rs  system.rs
crates/spark-widgets/: Cargo.toml
crates/spark-widgets/src/: button.rs  container.rs  context.rs  lib.rs  scroll.rs  text.rs  text_input.rs  widget.rs
crates/spark/src/: accessibility.rs  app.rs  lib.rs  web.rs
docs/: shader-story.md  study-notes.md
docs/plans/: 2026-01-28-examples-implementation.md  2026-01-28-examples-redesign.md  2026-01-28-rename-sikhar-to-spark.md  2026-01-28-scroll-transformation.md
examples/: README.md
examples/counter/: Cargo.toml
examples/counter/src/: bin.rs  lib.rs
examples/demo/: Cargo.toml
examples/demo/src/: main.rs
examples/hello_world/: Cargo.toml
examples/hello_world/src/: bin.rs  lib.rs
examples/kitchen-sink/: Cargo.toml
examples/kitchen-sink/src/: main.rs
examples/layout/: Cargo.toml
examples/layout/src/: main.rs
examples/native-demo/: Cargo.toml
examples/native-demo/src/: main.rs
examples/triangle/: Cargo.toml
examples/triangle/src/: main.rs
run-wasm/: Cargo.toml
run-wasm/src/: main.rs
