[workspace]
members = [
    "crates/sikhar-core",
    "crates/sikhar-render",
    "crates/sikhar-layout",
    "crates/sikhar-text",
    "crates/sikhar-input",
    "crates/sikhar-widgets",
    "crates/sikhar-native-apple",
    "crates/sikhar",
    "examples/triangle",
    "examples/demo",
    "examples/counter",
    "examples/native-demo",
    "run-wasm",
]
resolver = "2"

[workspace.dependencies]
# Core dependencies
winit = "0.31.0-beta.2"
wgpu = "27.0.1"
pollster = "0.4.0"
bytemuck = { version = "1.24.0", features = ["derive"] }
env_logger = "0.11"
log = "0.4"

# Math
glam = "0.30.9"

# Layout
taffy = "0.9.2"

# Text
cosmic-text = "0.15.0"

# Utilities
slotmap = "1.0"
rustc-hash = "2.0"

# Input events
ui-events = "0.2"
ui-events-winit = "0.2"

# Internal crates
sikhar-core = { path = "crates/sikhar-core" }
sikhar-render = { path = "crates/sikhar-render" }
sikhar-layout = { path = "crates/sikhar-layout" }
sikhar-text = { path = "crates/sikhar-text" }
sikhar-input = { path = "crates/sikhar-input" }
sikhar-widgets = { path = "crates/sikhar-widgets" }
sikhar-native-apple = { path = "crates/sikhar-native-apple" }

# Web dependencies (add to workspace.dependencies for individual crates)
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
] }
console_error_panic_hook = "0.1"

[profile.release]
lto = true
codegen-units = 1
