[workspace]
members = [
    "crates/spark-core",
    "crates/spark-render",
    "crates/spark-layout",
    "crates/spark-text",
    "crates/spark-input",
    "crates/spark-widgets",
    "crates/spark-native-apple",
    "crates/spark",
    "examples/triangle",
    "examples/demo",
    "examples/counter",
    "examples/hello_world",
    "examples/native-demo",
    "run-wasm",
]
resolver = "2"

[workspace.dependencies]
# Core dependencies
winit = "0.31.0-beta.2"
wgpu = "27.0.1"
pollster = "0.4.0"
bytemuck = { version = "1.24.0", features = ["derive"] }
env_logger = "0.11"
log = "0.4"

# Math
glam = "0.30.9"

# Layout
taffy = "0.9.2"

# Text
parley = "0.5.0"
swash = "0.2.0"

# Utilities
slotmap = "1.0"
rustc-hash = "2.0"

# Input events
ui-events = "0.2"
ui-events-winit = "0.2"

# Accessibility
accesskit = "0.21"
accesskit_winit = "0.29"

# Internal crates
spark-core = { path = "crates/spark-core" }
spark-render = { path = "crates/spark-render" }
spark-layout = { path = "crates/spark-layout" }
spark-text = { path = "crates/spark-text" }
spark-input = { path = "crates/spark-input" }
spark-widgets = { path = "crates/spark-widgets" }
spark-native-apple = { path = "crates/spark-native-apple" }

# Web dependencies (add to workspace.dependencies for individual crates)
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
] }
console_error_panic_hook = "0.1"

[profile.release]
lto = true
codegen-units = 1
