[package]
name = "sikhar-native-apple"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Native Apple widget integration for Sikhar"

[dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
sikhar-core = { workspace = true }
sikhar-widgets = { workspace = true }
sikhar-layout = { workspace = true }
sikhar-input = { workspace = true }
glam = { workspace = true }
taffy = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = "0.3"

[target.'cfg(target_os = "ios")'.dependencies]
objc2-ui-kit = "0.3"

[target.'cfg(not(any(target_os = "macos", target_os = "ios")))'.dependencies]
# Dummy dependencies for non-Apple platforms
objc2-app-kit = { version = "0.3", optional = true }
objc2-ui-kit = { version = "0.3", optional = true }
