[package]
name = "sikhar-widgets"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
sikhar-core = { workspace = true }
sikhar-render = { workspace = true }
sikhar-layout = { workspace = true }
sikhar-text = { workspace = true }
sikhar-input = { workspace = true }
glam = { workspace = true }
taffy = { workspace = true }
wgpu = { workspace = true }

