[package]
name = "spark-input"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
spark-core = { workspace = true }
spark-layout = { workspace = true }
glam = { workspace = true }
slotmap = { workspace = true }
ui-events = { workspace = true }
ui-events-winit = { workspace = true }

