[package]
name = "counter"
version = "0.1.0"
edition = "2021"

[lib]
name = "counter"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "counter"
path = "src/bin.rs"

[dependencies]
spark = { path = "../../crates/spark" }
env_logger = { workspace = true }
log = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }

