[package]
name = "native-demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "native-demo"
path = "src/main.rs"

[dependencies]
sikhar = { path = "../../crates/sikhar" }
sikhar-widgets = { path = "../../crates/sikhar-widgets" }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
sikhar-native-apple = { path = "../../crates/sikhar-native-apple" }
