[package]
name = "native-demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "native-demo"
path = "src/main.rs"

[dependencies]
spark = { path = "../../crates/spark" }
spark-widgets = { path = "../../crates/spark-widgets" }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
spark-native-apple = { path = "../../crates/spark-native-apple" }
